--- a/app/src/main/res/layout/activity_phone_confirm.xml
+++ b/app/src/main/res/layout/activity_phone_confirm.xml
@@ -34,20 +34,24 @@
         <Button
             android:id="@+id/btnAction"
             style="@style/button.centered.action"
-            android:layout_width="@dimen/vs_xxxlarge"
+            android:layout_width="160dp"
             android:text="@string/code_confirm_send"/>
 
         <include layout="@layout/layout_empty_view"/>
 
         <TextView
             style="@style/text.link.green"
-            android:id="@+id/help"
+            android:id="@+id/feedback"
             android:layout_marginBottom="@dimen/pd_xxsmall"
             android:layout_marginTop="@dimen/pd_xxlarge"
+            android:text="@string/help"
+            />
+
+        <TextView
+            style="@style/text.link.green"
+            android:id="@+id/help"
+            android:layout_marginBottom="@dimen/pd_xxsmall"
             android:text="@string/help_phone_not_correct"
-            android:paddingLeft="0dp"
-            android:minWidth="0dp"
-            android:layout_gravity="left"
             />
 
     </LinearLayout>
