--- a/app/src/main/res/layout/layout_auth_logo.xml
+++ b/app/src/main/res/layout/layout_auth_logo.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:paddingBottom="@dimen/pd_xsmall"
     android:paddingTop="@dimen/pd_xsmall"
+    android:layout_gravity="center_horizontal"
+    android:layout_centerHorizontal="true"
     android:src="@drawable/text_logo" />
