--- a/app/src/main/res/values/base_styles.xml
+++ b/app/src/main/res/values/base_styles.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!--Стили для контейнеров-->
     <style name="root">
@@ -295,7 +294,7 @@
         <item name="android:background">@drawable/ag_back_button</item>
         <item name="android:textColor">@color/selector_button_text_color</item>
         <item name="android:minHeight">@dimen/vs_xxsmall</item>
-        <item name="android:minWidth">@dimen/vs_xsmall</item>
+        <item name="android:minWidth">@dimen/vs_normal</item>
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
     </style>
 
