--- a/app/src/main/res/layout/fragment_about_app.xml
+++ b/app/src/main/res/layout/fragment_about_app.xml
@@ -7,7 +7,9 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/about_iconapps"/>
+        android:minHeight="75dp"
+        android:minWidth="75dp"
+        android:src="@drawable/ic_launcher_v230"/>
 
     <TextView
         style="@style/header.up"
