--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="green_lightest">#88d7ba</color>
     <color name="green_pale">#c8ecdf</color>
     <color name="white">#fff</color>
+    <color name="yellow">#f5dc1e</color>
     <color name="red">#FF0000</color>
     <color name="white_20">#51ffffff</color>
     <color name="green_smoky">#87d8d1</color>
