--- a/app/src/main/res/layout/layout_user_tab_profile.xml
+++ b/app/src/main/res/layout/layout_user_tab_profile.xml
@@ -1,22 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.ui.fragment.UserTabFragment" />
+            type="ru.mos.polls.newprofile.ui.vm.UserTabFragmentVM"/>
+
+
+        <variable
+            name="agUser"
+            type="ru.mos.elk.profile.AgUser"/>
     </data>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="uset" />
-    </LinearLayout>
+    <ScrollView
+        style="@style/root"
+        android:fillViewport="true">
+
+        <LinearLayout
+            style="@style/item.linear"
+
+            android:gravity="top">
+
+            <LinearLayout
+                style="@style/item"
+                android:background="@color/actionbar_background"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/pd_normal">
+
+                <include
+                    android:id="@+id/agUser_avatar_panel"
+                    layout="@layout/layout_user_avatar_panel"
+                    bind:agUser="@{agUser}"/>
+
+                <include
+                    android:id="@+id/agUser_status_info_panel"
+                    layout="@layout/layout_user_status_info"
+                    bind:agUser="@{agUser}"/>
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/agUser_statistics_list"
+                style="@style/item"/>
+        </LinearLayout>
+    </ScrollView>
 </layout>
