--- a/app/src/main/res/values/base_styles.xml
+++ b/app/src/main/res/values/base_styles.xml
@@ -158,6 +158,11 @@
     </style>
 
     <style name="text.small.white">
+        <item name="android:fontFamily" tools:ignore="NewApi">sans-serif-light</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="text.normal.white">
         <item name="android:fontFamily" tools:ignore="NewApi">sans-serif-medium</item>
         <item name="android:textColor">@color/white</item>
     </style>
@@ -402,7 +407,7 @@
         <item name="android:drawablePadding">@dimen/pd_xxsmall</item>
         <item name="android:gravity">center_vertical</item>
     </style>
-    
+
     <style name="cardview" parent="root">
         <item name="android:layout_margin">2dp</item>
         <item name="cardCornerRadius">@dimen/quest_background_round</item>
