--- a/app/src/main/res/layout/layout_user_avatar_panel.xml
+++ b/app/src/main/res/layout/layout_user_avatar_panel.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="agUser"
-            type="ru.mos.elk.profile.AgUser"/>
+            type="ru.mos.elk.profile.AgUser" />
+
+        <variable
+            name="clickListener"
+            type="ru.mos.polls.newprofile.ui.fragment.UserTabClickListener" />
     </data>
 
     <LinearLayout
@@ -19,7 +23,9 @@
             android:id="@+id/agUser_camera"
             style="@style/wrap"
             android:layout_weight="1"
-            android:src="@drawable/shop_white"/>
+            android:clickable="true"
+            android:onClick="@{()->clickListener.makePhoto()}"
+            android:src="@drawable/shop_white" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/agUser_image"
@@ -29,13 +35,15 @@
             android:src="@drawable/unlogin2"
             app:civ_border_color="@color/white"
             app:civ_border_width="2dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/agUser_edit"
             style="@style/wrap"
             android:layout_weight="1"
-            android:src="@drawable/news"/>
+            android:clickable="true"
+            android:onClick="@{()->clickListener.editUserInfo()}"
+            android:src="@drawable/news" />
 
     </LinearLayout>
 </layout>
