--- a/app/src/main/res/layout/layout_new_edit_profile.xml
+++ b/app/src/main/res/layout/layout_new_edit_profile.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.ui.vm.EditProfileFragmentVM" />
+            type="ru.mos.polls.newprofile.vm.EditProfileFragmentVM" />
     </data>
 
     <LinearLayout
