--- a/app/src/main/res/layout/layout_user_tab_profile.xml
+++ b/app/src/main/res/layout/layout_user_tab_profile.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+        xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.vm.UserTabFragmentVM" />
+            type="ru.mos.polls.newprofile.vm.UserTabFragmentVM"/>
 
         <variable
             name="agUser"
-            type="ru.mos.elk.profile.AgUser" />
+            type="ru.mos.elk.profile.AgUser"/>
 
         <variable
             name="clickListener"
-            type="ru.mos.polls.newprofile.ui.fragment.UserTabClickListener" />
+            type="ru.mos.polls.newprofile.ui.fragment.UserTabClickListener"/>
     </data>
 
     <android.support.v4.widget.NestedScrollView
@@ -23,6 +23,7 @@
 
         <LinearLayout
             style="@style/item.linear"
+            android:descendantFocusability="blocksDescendants"
             android:gravity="top">
 
             <LinearLayout
@@ -35,17 +36,17 @@
                     android:id="@+id/agUser_avatar_panel"
                     layout="@layout/layout_user_avatar_panel"
                     bind:agUser="@{agUser}"
-                    bind:clickListener="@{clickListener}" />
+                    bind:clickListener="@{clickListener}"/>
 
                 <include
                     android:id="@+id/agUser_status_info_panel"
                     layout="@layout/layout_user_status_info"
-                    bind:agUser="@{agUser}" />
+                    bind:agUser="@{agUser}"/>
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/agUser_statistics_list"
-                style="@style/item" />
+                style="@style/item"/>
 
             <RelativeLayout
                 style="@style/item.linear.horizontal"
@@ -53,7 +54,7 @@
 
                 <TextView
                     style="@style/text.normal.black"
-                    android:text="Профиль виден всем" />
+                    android:text="Профиль виден всем"/>
 
                 <android.support.v7.widget.SwitchCompat
                     android:id="@+id/agUser_profile_visibility"
@@ -62,7 +63,7 @@
                     android:checked="true"
                     android:textOff="@string/empty"
                     android:textOn="@string/empty"
-                    android:thumbTextPadding="@dimen/pd_xlarge" />
+                    android:thumbTextPadding="@dimen/pd_xlarge"/>
             </RelativeLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
