--- a/app/src/main/res/layout/layout_user_tab_profile.xml
+++ b/app/src/main/res/layout/layout_user_tab_profile.xml
@@ -45,7 +45,7 @@
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/agUser_statistics_list"
+                android:id="@+id/agUser_profile_list"
                 style="@style/item"/>
 
             <RelativeLayout
