--- a/app/src/main/res/layout/layout_user_avatar_panel.xml
+++ b/app/src/main/res/layout/layout_user_avatar_panel.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="clickListener"
-            type="ru.mos.polls.newprofile.ui.fragment.UserTabClickListener" />
+            type="ru.mos.polls.newprofile.ui.fragment.AvatarPanelClickListener" />
     </data>
 
     <LinearLayout
