--- a/app/src/main/res/layout/item_achievement.xml
+++ b/app/src/main/res/layout/item_achievement.xml
@@ -1,26 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout style="@style/root"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:padding="@dimen/pd_xsmall">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <include
-        android:id="@+id/badgeContainer"
-        layout="@layout/layout_badge"/>
+    <data>
 
-    <LinearLayout
-        style="@style/item.linear"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/pd_xxsmall"
-        android:layout_toRightOf="@id/badgeContainer">
+        <variable
+            name="viewModel"
+            type="ru.mos.polls.newprofile.vm.AchievementVM"/>
 
-        <TextView
-            android:id="@+id/title"
-            style="@style/text.large"
-            android:layout_width="match_parent"/>
+    </data>
 
-        <TextView
-            android:id="@+id/subtitle"
-            style="@style/text.normal"
-            android:textColor="@color/greyHint"/>
-    </LinearLayout>
-</RelativeLayout>
+    <RelativeLayout
+        style="@style/root"
+
+        android:padding="@dimen/pd_xsmall">
+
+        <include
+            android:id="@+id/badgeContainer"
+            layout="@layout/layout_badge"/>
+
+        <LinearLayout
+            style="@style/item.linear"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/pd_xxsmall"
+            android:layout_toRightOf="@id/badgeContainer">
+
+            <TextView
+                android:id="@+id/title"
+                style="@style/text.large"
+                android:layout_width="match_parent"/>
+
+            <TextView
+                android:id="@+id/subtitle"
+                style="@style/text.normal"
+                android:textColor="@color/greyHint"/>
+        </LinearLayout>
+    </RelativeLayout>
+</layout>
