--- a/app/src/main/res/layout/layout_user_status_info.xml
+++ b/app/src/main/res/layout/layout_user_status_info.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="agUser"
-            type="ru.mos.elk.profile.AgUser" />
+            type="ru.mos.elk.profile.AgUser"/>
     </data>
 
     <LinearLayout
@@ -15,52 +15,97 @@
         android:background="@color/actionbar_background"
         android:orientation="vertical">
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/agUser_fi"
             style="@style/text.normal.white"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
             android:text="@{agUser.getSurnameAndFirstName()}"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/agUser_registration_date"
             style="@style/text.small.white"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
-            android:text="активный гражданин с 8 июня 2017" />
+            android:text="активный гражданин с 8 июня 2017"/>
 
+        <RelativeLayout
+            android:id="@+id/agUser_achivement_panel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/pd_xsmall"
+            android:paddingTop="@dimen/pd_xsmall">
 
-        <TextView
+            <LinearLayout
+                android:id="@+id/agUser_achivement_layer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="@dimen/vs_xxsmall"
+                    android:layout_height="@dimen/vs_xxsmall"
+                    android:layout_margin="@dimen/pd_xxxsmall"
+                    android:src="@drawable/com_facebook_button_icon"/>
+
+                <ImageView
+                    android:layout_width="@dimen/vs_xxsmall"
+                    android:layout_height="@dimen/vs_xxsmall"
+                    android:layout_margin="@dimen/pd_xxxsmall"
+                    android:src="@drawable/com_facebook_button_icon"/>
+
+                <ImageView
+                    android:layout_width="@dimen/vs_xxsmall"
+                    android:layout_height="@dimen/vs_xxsmall"
+                    android:layout_margin="@dimen/pd_xxxsmall"
+                    android:src="@drawable/com_facebook_button_icon"/>
+            </LinearLayout>
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/agUser_achivement_value"
+                style="@style/text.normal.white"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/pd_normal"
+                android:layout_toEndOf="@+id/agUser_achivement_layer"
+                android:layout_toRightOf="@+id/agUser_achivement_layer"
+                android:text="+6"/>
+        </RelativeLayout>
+
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/agUser_rating_title"
             style="@style/text.small.white"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/pd_normal"
             android:gravity="center_horizontal"
-            android:text="общий рейтинг" />
+            android:text="общий рейтинг"/>
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/agUser_rating_value"
             style="@style/text.large.white"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
             android:text="50"
-            android:textSize="@dimen/ts_xxxlarge" />
+            android:textSize="@dimen/ts_xxxlarge"/>
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/agUser_status_title"
             style="@style/text.small.white"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/pd_normal"
             android:gravity="center_horizontal"
-            android:text="статус" />
+            android:text="статус"/>
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/agUser_status_value"
             style="@style/text.large.white"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
             android:text="Новис"
-            android:textSize="@dimen/ts_xxlarge" />
+            android:textSize="@dimen/ts_xxlarge"/>
     </LinearLayout>
 </layout>
