биндинг для viewmodel

--- a/app/src/main/res/layout/item_achievement.xml
+++ b/app/src/main/res/layout/item_achievement.xml
@@ -11,7 +11,7 @@
     </data>
 
     <RelativeLayout
-        style="@style/root"
+        style="@style/item.linear"
 
         android:padding="@dimen/pd_xsmall">
 
