--- a/app/src/main/res/layout/layout_new_edit_personal_info.xml
+++ b/app/src/main/res/layout/layout_new_edit_personal_info.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.vm.EditPersonalInfoFragmentVM"/>
+            type="ru.mos.polls.newprofile.vm.EditPersonalInfoFragmentVM" />
     </data>
 
     <LinearLayout
@@ -13,18 +13,16 @@
         android:background="@color/white"
         android:padding="@dimen/pd_xxsmall">
 
+        <include
+            android:id="@+id/email_container"
+            layout="@layout/layout_email_contact" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/email_wrapper"
-            style="@style/item">
+        <include
+            android:id="@+id/fio_container"
+            layout="@layout/layout_fio" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/email"
-                style="@style/edit_profile"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"/>
-
-        </android.support.design.widget.TextInputLayout>
-
+        <include
+            android:id="@+id/childs_count_container"
+            layout="@layout/layout_childs_count" />
     </LinearLayout>
 </layout>
