социальный статус пользователя

--- a/app/src/main/res/layout/layout_new_edit_personal_info.xml
+++ b/app/src/main/res/layout/layout_new_edit_personal_info.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.vm.EditPersonalInfoFragmentVM" />
+            type="ru.mos.polls.newprofile.vm.EditPersonalInfoFragmentVM"/>
     </data>
 
     <LinearLayout
@@ -15,14 +15,18 @@
 
         <include
             android:id="@+id/email_container"
-            layout="@layout/layout_email_contact" />
+            layout="@layout/layout_email_contact"/>
 
         <include
             android:id="@+id/fio_container"
-            layout="@layout/layout_fio" />
+            layout="@layout/layout_fio"/>
 
         <include
             android:id="@+id/childs_count_container"
-            layout="@layout/layout_childs_count" />
+            layout="@layout/layout_childs_count"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/root"
+            style="@style/item"/>
     </LinearLayout>
 </layout>
